--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,23 @@
-<p id="notice"><%= notice %></p>
+<% if !user_signed_in? %>
+<div class="jumbotron">
+  <h1>Review Your Favorite Movies</h1>
+  <p> Add text to this </p>
+  <p><%= link_to "Sign Up and Start Reviewing!", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+</div>
+<% end %>
+
+<div class="row">
+  <% @movies.each do |movie| %>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+
+<!--<p id="notice"><%= notice %></p>
 
 <h1>Listing Movies</h1>
 
@@ -33,4 +52,4 @@
 
 <br>
 
-<%= link_to 'New Movie', new_movie_path %>
+<%= link_to 'New Movie', new_movie_path %>!-->
