Pushing files after merge conflicts

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <% if !user_signed_in? %>
 <div class="jumbotron">
   <h1>Review Your Favorite Movies</h1>
-  <p> Add text to this </p>
+  <p> This is not the home of the tomatometer.  This is Sonny Movies! </p>
   <p><%= link_to "Sign Up and Start Reviewing!", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
 </div>
 <% end %>
