Changed a few form texts

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -16,7 +16,7 @@
                 <td><%= @movie.description %></td>
               </tr>
               <tr>
-                <td><strong>Movie length:</strong></td>
+                <td><strong>Movie runtime:</strong></td>
                 <td><%= @movie.movie_length %></td>
               </tr>
               <tr>
