--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,12 +20,17 @@
           <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
         <% end %>
       </ul>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      <%= form_tag( search_path, class: "navbar-form navbar-right") do %>
+        <%= search_field_tag :term, nil, class: "form-control" %>
+        <%= submit_tag 'Submit', class: "btn btn-default" %>
+      <% end %>
     </div>
   </div>
 </nav>
+
+<!-- <form class="navbar-form navbar-right" role="search">
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Search">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form> -->
